--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 authors = ["Maplicant <maplicant@gmail.com>"]
 
 [dependencies]
-ggez = "*"
+ggez = "0.3"
 rand = "*"
 rayon = "*"
