--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "purplerain"
 version = "0.1.0"
-authors = ["Maplicant <maplicant@gmail.com>"]
+authors = ["Maurits van Altvorst <mvanaltvorst@icloud.com>"]
 
 [dependencies]
 ggez = "*"
